# routes/utils/user_utils.js
@@ -9,7 +9,23 @@ async function getFavoriteRecipes(user_id){
     return recipes_id;
 }
 
+async function getmyRecipes(user_id){
+    let query= `SELECT user_id, recipe_id, title, image, readyInMinutes ,vegetarian, vegan , glutenFree
+    FROM
+    recipes 
+    WHERE
+    user_id = '${user_id}' `;
+    let myRecipesList= await DButils.execQuery(query);
+    return myRecipesList;
+}
+
+async function getRecipeViews(user_id , recipe_id){
+    res = await DButils.execQuery(`SELECT EXISTS (SELECT 1 FROM views WHERE user_id='${user_id}' AND recipe_id='${recipe_id}')`)
+    return Object.values(res[0])[0] === 1;
+}
 
 
 exports.markAsFavorite = markAsFavorite;
 exports.getFavoriteRecipes = getFavoriteRecipes;
+exports.getmyRecipes=getmyRecipes;
+exports.getRecipeViews = getRecipeViews;
